Showcase ion-icon Safari bug on complex SVG

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,9 @@
+ion-icon{
+  font-size: 32px;
+}
 
+.css-icon{
+  width: 32px;
+  height: 32px;
+  background-image: url("/assets/rocket.svg");
+}
